--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -1468,4 +1468,9 @@
     <!--Embedded BrokenSwitcher-->
     <string name="switcher_settings_title">Broken Switcher</string>
 
+    <!-- UI debug setting: show CPU info? [CHAR LIMIT=25] -->
+    <string name="show_cpu_info">Show CPU info</string>
+    <!-- UI debug setting: show cpu usage summary [CHAR LIMIT=50] -->
+    <string name="show_cpu_info_summary">Screen overlay showing current CPU info</string>
+
 </resources>
