Display Settings: Better font size control
Use a SeekBar instead of a list/spinner to determine the font scaling.
For consistency, an approximate size (small, normal, etc.)
 and the exact percentage are displayed.
Show a preview of the selected font size immediately

Ported from CM 10.2, squashed commits 46678 and 49167.
Credit to Veeti Paaananen for the latter commit.

Change-Id: I754d7fdcaf27c23dfccf9d56291956e70b23f63e

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -1630,4 +1630,8 @@
     <string name="keyguard_logo_custom_title">Custom Logo</string>
     <string name="keyguard_logo_custom_summary">Select a custom image for the logo view</string>
     
+    <!-- Font size sample text. This needs to be a very short string, as it is shown in
+    multiple font sizes in a limited amount of space. -->
+    <string name="font_size_sample">Dysfunctional</string>
+    
 </resources>
