FIX:Settings: Convert AppOps array items to string references
* Avoid future breakage
 This will need conversion of all AOSP translated arrays to strings

Change-Id: I2e52e4013d1232d529ce5b9e3aae3502c42e938a

--- a/res/values/custom_arrays.xml
+++ b/res/values/custom_arrays.xml
@@ -823,7 +823,7 @@
     </string-array>
 
     <!-- Names of categories of app ops tabs - extension of AOSP -->
-    <string-array name="app_ops_categories" translatable="false">
+    <string-array name="app_ops_categories_cm" translatable="false">
         <item>@string/app_ops_categories_location</item>
         <item>@string/app_ops_categories_personal</item>
         <item>@string/app_ops_categories_messaging</item>
