Forward Port: Add Broken Version to about phone
Change-Id: Ib3170a8892740a70f468388d9d8d046f913f1b47

Conflicts:
	res/values/slim_strings.xml
	src/com/android/settings/DeviceInfoSettings.java

Conflicts:
	res/values/custom_strings.xml
	src/com/android/settings/DeviceInfoSettings.java

--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -97,6 +97,12 @@
                         android:data="https://source.android.com/security/bulletin/" />
         </PreferenceScreen>
 
+        <!-- Slim firmware version -->
+        <Preference android:key="broken_version"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/broken_version_title"
+                android:summary="@string/broken_version_default"/>
+
         <!-- Device FCC equipment id -->
         <Preference android:key="fcc_equipment_id"
                 android:enabled="false"
