--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -23,4 +23,8 @@
     <!--Embedded Viper4Android-->
     <string name="viper_settings_title">Viper4Android</string>
 
+    <!-- About phone screen, Broken version -->
+    <string name="broken_version_title">Broken Version</string>
+    <string name="broken_version_default">Unknown</string>
+    
 </resources>
