--- a/res/values/custom_arrays.xml
+++ b/res/values/custom_arrays.xml
@@ -296,7 +296,7 @@
         <item>**wake_device**</item>
         <item>**null**</item>
     </string-array>
-    
+
     <!-- HW Key Rebinding -->
     <string-array name="shortcut_action_hwkey_entries">
         <item>@string/shortcut_action_back</item>
@@ -374,7 +374,7 @@
         <item>2500</item>
         <item>5000</item>
     </string-array>
-     
+
      <!-- PA PIE -->
      <string-array name="entries_pa_pie_size">
          <item>@string/pa_pie_size_small</item>
@@ -384,7 +384,7 @@
          <item>@string/pa_pie_size_monster</item>
          <item>@string/pa_pie_size_enormous</item>
      </string-array>
- 
+
      <string-array name="values_pa_pie_size" translatable="false">
          <item>0.9</item>
          <item>1.0</item>
@@ -393,33 +393,33 @@
          <item>1.3</item>
          <item>1.4</item>
      </string-array>
- 
+
      <string-array name="entries_pa_pie_gravity">
          <item>@string/pa_pie_gravity_left</item>
          <item>@string/pa_pie_gravity_right</item>
          <item>@string/pa_pie_gravity_bottom</item>
      </string-array>
- 
+
      <string-array name="values_pa_pie_gravity" translatable="false">
          <item>0</item>
          <item>1</item>
          <item>2</item>
      </string-array>
- 
+
      <string-array name="entries_pa_pie_mode">
          <item>@string/pa_pie_mode_bare</item>
          <item>@string/pa_pie_mode_quick</item>
          <item>@string/pa_pie_mode_default</item>
          <item>@string/pa_pie_mode_slow</item>
      </string-array>
- 
+
      <string-array name="values_pa_pie_mode" translatable="false">
          <item>-1</item>
          <item>0</item>
          <item>1</item>
          <item>2</item>
      </string-array>
- 
+
      <string-array name="entries_pa_pie_angle">
          <item>@string/pa_pie_angle_none</item>
          <item>@string/pa_pie_angle_small</item>
@@ -427,7 +427,7 @@
          <item>@string/pa_pie_angle_huge</item>
          <item>@string/pa_pie_angle_super</item>
      </string-array>
- 
+
      <string-array name="values_pa_pie_angle" translatable="false">
          <item>0</item>
          <item>6</item>
@@ -435,21 +435,21 @@
          <item>18</item>
          <item>24</item>
      </string-array>
- 
+
      <string-array name="entries_pa_pie_gap">
          <item>@string/pa_pie_gap_none</item>
          <item>@string/pa_pie_gap_small</item>
          <item>@string/pa_pie_gap_big</item>
          <item>@string/pa_pie_gap_huge</item>
      </string-array>
- 
+
      <string-array name="values_pa_pie_gap" translatable="false">
          <item>0</item>
          <item>1</item>
          <item>2</item>
          <item>3</item>
      </string-array>
-    
+
     <string-array name="status_bar_battery_style_entries" translatable="false">
         <item>@string/status_bar_battery_style_icon_portrait</item>
         <item>@string/status_bar_battery_style_icon_landscape</item>
@@ -550,7 +550,7 @@
         <item>EEEE MM/dd</item>
         <item>@string/clock_date_format_custom</item>
     </string-array>
-    
+
     <!-- Carrier Label -->
     <string-array name="carrier_label_entries">
         <item>@string/show_carrier_disabled</item>
@@ -579,7 +579,7 @@
         <item>voiceassist</item>
         <item>silent</item>
     </string-array>
-    
+
     <!-- Less Notifications -->
     <string-array name="less_notification_sounds_entries">
         <item>@string/less_notification_sounds_default</item>
@@ -593,7 +593,7 @@
         <item>@string/less_notification_sounds_2m</item>
         <item>@string/less_notification_sounds_5m</item>
     </string-array>
- 
+
     <string-array name="less_notification_sounds_values" translatable="false">
         <item>0</item>
         <item>3000</item>
@@ -606,7 +606,7 @@
         <item>120000</item>
         <item>300000</item>
     </string-array>
-    
+
     <!-- Dashboard columns -->
     <string-array name="dashboard_columns_entries">
         <item>@string/dashboard_columns_default</item>
@@ -630,7 +630,7 @@
         <item>0</item>
         <item>1</item>
     </string-array>
-    
+
     <!-- Lockscreen Weather -->
     <string-array name="weather_condition_icon_entries" translatable="false">
         <item>@string/weather_condition_icon_monochrome_title</item>
@@ -682,7 +682,7 @@
         <item>3</item>
         <item>4</item>
     </string-array>
-    
+
     <!-- Quick pulldown -->
     <string-array name="quick_pulldown_entries" translatable="false">
         <item>@string/quick_pulldown_off</item>
@@ -708,7 +708,7 @@
         <item>1</item>
         <item>2</item>
     </string-array>
-    
+
     <!-- Network Traffic Display States -->
     <string-array name="show_network_traffic_state_entries" translatable="false">
         <item>@string/show_network_traffic_disable</item>
@@ -749,7 +749,7 @@
         <item>1500</item>
         <item>2000</item>
     </string-array>
-    
+
     <!-- Status bar temperature -->
     <string-array name="status_bar_temperature_entries" translatable="false">
         <item>@string/status_bar_temperature_hidden</item>
@@ -762,7 +762,7 @@
         <item>1</item>
         <item>2</item>
     </string-array>
-    
+
     <!-- Status bar temperature location-->
     <string-array name="status_bar_temperature_location_entries" translatable="false">
         <item>@string/status_bar_temperature_location_right</item>
@@ -792,7 +792,7 @@
     <string-array name="blacklist_policy_private_values" translatable="false">
         <item>1</item>
     </string-array>
-    
+
     <!-- Volume step options. -->
     <string-array name="volume_steps_entries" translatable="false">
         <item>@string/volume_steps_60</item>
@@ -821,7 +821,7 @@
         <item>4</item>
         <item>5</item>
     </string-array>
-    
+
     <!-- Names of categories of app ops tabs - extension of AOSP -->
     <string-array name="app_ops_categories" translatable="false">
         <item>@string/app_ops_categories_location</item>
@@ -832,7 +832,7 @@
         <item>@string/app_ops_categories_bootup</item>
         <item>@string/app_ops_categories_su</item>
     </string-array>
-    
+
     <!-- User display names for app ops codes - extension of AOSP -->
     <string-array name="app_ops_summaries_cm" translatable="false">
         <item>@string/app_ops_summaries_coarse_location</item>
@@ -985,7 +985,7 @@
         <item>@string/app_ops_permissions_ignored</item>
         <item>@string/app_ops_permissions_always_ask</item>
     </string-array>
-    
+
     <string-array name="expanded_desktop_entries" translatable="false">
         <item>@string/expanded_hide_both</item>
         <item>@string/expanded_hide_status</item>
@@ -997,7 +997,7 @@
         <item>1</item>
         <item>2</item>
     </string-array>
-    
+
     <!-- Keyguard clock and date -->
     <string-array name="keyguard_clock_style_entries" translatable="false">
         <item>@string/right_clock</item>
@@ -1068,7 +1068,7 @@
         <item>EEEE MM/dd</item>
         <item>@string/clock_date_format_custom</item>
     </string-array>
-    
+
     <!-- Wi-Fi settings. Presented as a list dialog to the user to choose the Wi-Fi region code. -->
     <string-array name="wifi_countrycode_entries" translatable="false">
         <item>United States</item>
@@ -1099,7 +1099,7 @@
         <item>SG</item>
         <item>BR</item>
     </string-array>
-    
+
     <!-- Volume key cursor control -->
     <string-array name="volbtn_cursor_control_entries" translatable="false">
         <item>@string/volbtn_cursor_control_off</item>
@@ -1112,7 +1112,7 @@
         <item>1</item>
         <item>2</item>
     </string-array>
-    
+
     <!-- Tiles animation style -->
     <string-array name="qs_tile_animation_style_entries" translatable="false">
         <item>@string/qs_tile_animation_style_off</item>
@@ -1206,7 +1206,7 @@
         <item>@string/toast_GrowFadeBottom_animation</item>
         <item>@string/toast_Translucent_animation</item>
         <item>@string/toast_SlideLeftRight_animation</item>
-        <item>@string/toast_SlideRightLeft_animation</item>        
+        <item>@string/toast_SlideRightLeft_animation</item>
     </string-array>
 
     <string-array name="toast_animation_values">
@@ -1225,7 +1225,7 @@
         <item>12</item>
         <item>13</item>
         <item>14</item>
-        <item>15</item>                
+        <item>15</item>
     </string-array>
 
     <!-- Listview animation -->
@@ -1279,5 +1279,18 @@
         <item>6</item>
         <item>7</item>
      </string-array>
+
+     <!-- MediaScanner behavior on boot -->
+    <string-array name="media_scanner_on_boot_entries">
+        <item>@string/media_scanner_on_boot_enabled</item>
+        <item>@string/media_scanner_on_boot_ask</item>
+        <item>@string/media_scanner_on_boot_disabled</item>
+    </string-array>
+
+    <string-array name="media_scanner_on_boot_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
 
 </resources>
