--- a/res/xml/broken_settings.xml
+++ b/res/xml/broken_settings.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<PreferenceScreen 
+<PreferenceScreen
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >
         <PreferenceScreen android:layout="@layout/brokenpieces" android:key="od_brokenpieces" />
-        
+
     <!-- Animations -->
     <PreferenceScreen
          android:id="@+id/animation_settings"
          android:title="@string/animation_settings_title"
          android:summary="@string/animation_settings_summary"
          android:fragment="com.android.settings.broken.AnimationSettings" />
-        
+
     <PreferenceScreen
          android:id="@+id/app_circle_sidebar"
          android:title="@string/app_circle_bar_title"
          android:summary="@string/app_circle_sidebar_summary_real"
          android:fragment="com.android.settings.broken.AppCircleSidebar" />
-        
+
     <!-- Broken Walls -->
     <PreferenceScreen
            android:id="@+id/brokenwalls"
-           android:title="@string/brokenwalls_title" 
+           android:title="@string/brokenwalls_title"
            android:summary="@string/brokenwalls_summary" >
            <intent
                android:action="android.intent.action.SET_WALLPAPER"
                android:targetPackage="com.broken.BrokenWalls"
                android:targetClass="com.broken.BrokenWalls.brokenwalls" />
     </PreferenceScreen>
-    
+
     <PreferenceScreen
         android:key="expanded_desktop"
         android:title="@string/expanded_desktop_title"
@@ -38,13 +38,13 @@
     <PreferenceScreen
         android:key="gestures_general_category"
         android:fragment="com.android.settings.broken.GestureSettings"
-        android:title="@string/gestures_title" 
+        android:title="@string/gestures_title"
         android:summary="@string/gestures_screen_summary" />
-        
+
     <PreferenceScreen
         android:id="@+id/initD"
 		android:fragment="com.android.settings.broken.InitD"
-		android:title="@string/init_d_title" 
+		android:title="@string/init_d_title"
 		android:summary="@string/init_d_screen_summary" />
 
     <PreferenceScreen
@@ -52,7 +52,7 @@
         android:fragment="com.android.settings.broken.LockScreenSettings"
         android:title="@string/lockscreen_title"
         android:summary="@string/lockscreen_screen_summary" />
-        
+
     <PreferenceScreen
         android:key="navigation_bar_general_category"
         android:fragment="com.android.settings.broken.NavigationSettings"
@@ -64,23 +64,30 @@
         android:fragment="com.android.settings.broken.PowerMenuActions"
         android:title="@string/button_power_menu_settings_title"
         android:summary="@string/power_menu_screen_summary" />
-        
+
     <PreferenceScreen
         android:key="status_bar_general_category"
         android:fragment="com.android.settings.broken.StatusBarSettings"
         android:title="@string/status_bar_screen_title"
         android:summary="@string/status_bar_screen_summary" />
-    
+
     <PreferenceScreen
         android:key="volume_rocker_general_category"
         android:fragment="com.android.settings.broken.VolumeRockerSettings"
         android:title="@string/volume_rocker_screen_title"
         android:summary="@string/volume_rocker_screen_summary" />
-        
+
     <!-- SELinux -->
     <PreferenceCategory
         android:key="homeless_category"
         android:title="@string/homeless_title" />
+
+        <ListPreference
+            android:key="media_scanner_on_boot"
+            android:title="@string/media_scanner_on_boot_title"
+            android:persistent="false"
+            android:entries="@array/media_scanner_on_boot_entries"
+            android:entryValues="@array/media_scanner_on_boot_values" />
 
         <Preference
             android:key="selinux_switch"
