--- a/res/xml/language_settings.xml
+++ b/res/xml/language_settings.xml
@@ -93,6 +93,12 @@
                 android:key="stylus_gestures"
                 android:title="@string/gestures_settings_title" />
 
+        <SwitchPreference android:key="stylus_icon_enabled"
+                android:title="@string/stylus_icon_enabled_title"
+                android:summary="@string/stylus_icon_enabled_summary"
+                android:defaultValue="false"
+                android:persistent="false" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
