Add ability to ignore interruptions while active media playback
Change-Id: I92e9b6cbab1f167f8abb544a0a8e385e23b16775

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -1478,5 +1478,9 @@
     <string name="show_cpu_info">Show CPU info</string>
     <!-- UI debug setting: show cpu usage summary [CHAR LIMIT=50] -->
     <string name="show_cpu_info_summary">Screen overlay showing current CPU info</string>
+    
+    <!-- Audio Ducking -->
+    <string name="interruptions_ignore_while_media_title">Prevent audio ducking</string>
+    <string name="interruptions_ignore_while_media_summary">Do not reduce media playback volume when a notification arrives</string>
 
 </resources>
