--- a/res/xml/broken_settings.xml
+++ b/res/xml/broken_settings.xml
@@ -5,11 +5,18 @@
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >
         <PreferenceScreen android:layout="@layout/brokenpieces" android:key="od_brokenpieces" />
         
+    <!-- Animations -->
     <PreferenceScreen
-                android:id="@+id/app_circle_sidebar"
-                android:title="@string/app_circle_bar_title"
-                android:summary="@string/app_circle_sidebar_summary_real"
-                android:fragment="com.android.settings.broken.AppCircleSidebar" />
+         android:id="@+id/animation_settings"
+         android:title="@string/animation_settings_title"
+         android:summary="@string/animation_settings_summary"
+         android:fragment="com.android.settings.broken.AnimationSettings" />
+        
+    <PreferenceScreen
+         android:id="@+id/app_circle_sidebar"
+         android:title="@string/app_circle_bar_title"
+         android:summary="@string/app_circle_sidebar_summary_real"
+         android:fragment="com.android.settings.broken.AppCircleSidebar" />
         
     <!-- Broken Walls -->
     <PreferenceScreen
