--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -38,4 +38,7 @@
     <string name="build_id">Android-Build-ID</string>
     <string name="build_date">Build Date</string>
 
+    <!-- Dev Options Enabled by Default -->
+    <string name="show_dev_already_enabled">No need, development settings are enabled by default.</string>
+
 </resources>
