--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -519,6 +519,8 @@
     <string name="led_notification_title">Light settings</string>
     <string name="led_notification_text">LED light enabled by settings</string>
     <string name="allow_lights_title">Lights in do not disturb mode</string>
+    <string name="notification_light_brightness" translatable="false">@string/brightness</string>
+    <string name="keywords_lights_brightness_level">dim leds brightness</string>
     
     <!-- About phone screen -->
     <string name="cpu_info">CPU</string>
