--- a/res/xml/notification_light_settings.xml
+++ b/res/xml/notification_light_settings.xml
@@ -42,6 +42,14 @@
             android:key="allow_lights"
             android:title="@string/allow_lights_title"
             android:defaultValue="true" />
+            
+        <PreferenceScreen
+            android:key="notification_light_brightness_level"
+            android:title="@string/notification_light_brightness"
+            android:dependency="notification_light_pulse"
+            settings:keywords="@string/keywords_lights_brightness_level">
+            <intent android:action="android.intent.action.SHOW_NOTIFICATION_BRIGHTNESS_DIALOG" />
+        </PreferenceScreen>
 
     </PreferenceCategory>
 
