--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -35,7 +35,7 @@
 
         <!-- Broken OTA -->
         <PreferenceScreen
-               android:id="@+id/slimota"
+               android:key="slimota"
                android:title="@string/slimota_title" >
                <intent
                        android:action="android.intent.action.MAIN"
