--- a/res/xml/broken_settings_power.xml
+++ b/res/xml/broken_settings_power.xml
@@ -3,4 +3,9 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+	<SwitchPreference
+        android:key="power_menu_show_advanced_reboot"
+        android:title="@string/power_menu_show_advanced_reboot_title"
+        android:summary="@string/power_menu_show_advanced_reboot_summary" />
+
 </PreferenceScreen>
