Settings:add Screenrecord qs tile (2/2)
Change-Id: Ied2a2605b1d937cc18503eea0b8f0690028e278c

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -847,6 +847,7 @@
     <string name="qs_advanced_location_title">Advanced location settings</string>
     <string name="qs_advanced_location_summary">Enable advanced settings for location in quick settings</string>
     <string name="quick_settings_reset_message">Reset quick settings tiles?</string>
+    <string name="qs_tile_screenrecord">Screenrecord</string>
     
     <!-- ADB debugging notifications -->
     <string name="enable_adb_custom">Android debugging</string>
