Settings: forward port add changelog to about phone Original commit from ghsr <ghsr92@yandex.ru> Adapted for AICP by Ali B <abittin@gmail.com> Fitted for Broken by me

--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -79,6 +79,12 @@
                 android:title="@string/firmware_version"
                 android:summary="@string/device_info_default"/>
 
+        <!-- Changelog -->
+        <PreferenceScreen android:key="changelog"
+                android:title="@string/changelog_title"
+                android:summary="@string/changelog_title_summary"
+                android:fragment="com.android.settings.broken.ChangeLog" />
+
         <!-- Security patch level -->
         <Preference android:key="security_patch"
                 android:enabled="false"
