--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -1455,5 +1455,14 @@
     <!-- Current on Lockscreen -->
     <string name="lock_screen_show_current">Charging Current</string>
     <string name="lock_screen_show_current_summary">Show Charging Current rate on lock screen</string>
+    
+    <!-- Advanced storage settings -->
+    <string name="storage_advanced_titlebar">Advanced Storage</string>
+    <string name="storage_menu_advanced">Advanced</string>
+
+    <!-- USB data automatic unlock -->
+    <string name="usb_data_auto_unlock_title">Unlock USB data</string>
+    <string name="usb_data_auto_unlock_summary">Allow unlocked data access to your phone\'s storage through USB (MTP, PTP)</string>
+    <string name="usb_data_auto_unlock_warning_summary">Your device will establish unprotected connections, everytime you connect it to a PC. Secured lockscreens disable this option automatically.\n\nThis is still an experimental feature, use with caution.</string>
 
 </resources>
