Layers: dashboard icon background drawable
PS1:
 - Ability to use pngs/vectors etc (more freedom than before)
 - Ability to change the padding

Conflicts:
	res/values/layers_styles.xml

Change-Id: Ic81209c85e8e6f165e6e8530808ee29167c0b782

--- a/res/layout-land/dashboard_tile.xml
+++ b/res/layout-land/dashboard_tile.xml
@@ -34,6 +34,8 @@
 
             <ImageView
                     android:id="@+id/icon"
+                    android:theme="@style/DashboardIcon"
+                    android:padding="@dimen/dashboard_icon_bg_padding"
                     android:layout_width="@dimen/dashboard_tile_image_size"
                     android:layout_height="@dimen/dashboard_tile_image_size"
                     android:scaleType="centerInside"
