--- a/res/layout/dashboard_tile.xml
+++ b/res/layout/dashboard_tile.xml
@@ -23,6 +23,8 @@
 
     <ImageView
             android:id="@+id/icon"
+            android:theme="@style/DashboardIcon"
+            android:padding="@dimen/dashboard_icon_bg_padding"
             android:layout_width="@dimen/dashboard_tile_image_size"
             android:layout_height="@dimen/dashboard_tile_image_size"
             android:scaleType="centerInside"
