--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -783,6 +783,9 @@
     <string name="lockscreen_enable_power_menu_title">Show power menu lock screen</string>
     <string name="lockscreen_enable_power_menu_summary">This option will only disable the power menu on secure lock screens</string>
     
+    <!-- LTE tile -->
+    <string name="qs_tile_lte">LTE</string>
+    
     <!-- Sound settings -->
     <string name="advanced_sound_title">Advanced options</string>
     <string name="sound_title">Sound</string>
