--- a/res/xml/qs_settings.xml
+++ b/res/xml/qs_settings.xml
@@ -26,6 +26,20 @@
             android:key="qs_order"
             android:title="@string/qs_order_title"
             android:fragment="com.android.settings.broken.qs.QSTiles" />
+            
+        <ListPreference
+			android:key="qs_tile_animation_style"
+			android:title="@string/qs_tile_animation_style_title"
+			android:entries="@array/qs_tile_animation_style_entries"
+			android:entryValues="@array/qs_tile_animation_style_values"
+			android:persistent="false" />
+
+		<ListPreference
+			android:key="qs_tile_animation_duration"
+			android:title="@string/qs_tile_animation_duration_title"
+			android:entries="@array/qs_tile_animation_duration_entries"
+			android:entryValues="@array/qs_tile_animation_duration_values"
+			android:persistent="false" />
 
         <com.android.settings.broken.SecureSettingSwitchPreference
             android:key="sysui_qs_main_tiles"
