--- a/res/xml/qs_settings.xml
+++ b/res/xml/qs_settings.xml
@@ -55,6 +55,12 @@
             android:defaultValue="false" />
             
         <com.android.settings.broken.SecureSettingSwitchPreference
+            android:key="qs_wifi_detail"
+            android:title="@string/qs_wifi_detail_title"
+            android:summary="@string/qs_wifi_detail_summary"
+            android:defaultValue="false" />
+            
+        <com.android.settings.broken.SecureSettingSwitchPreference
             android:key="qs_use_four_columns"
             android:title="@string/qs_four_columns_title"
             android:defaultValue="false" />
