--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -1726,4 +1726,13 @@
     <!-- Notifications transparency -->
     <string name="notifications_transparency">Notifications transparency</string>
 
+    <!-- QS stroke settings -->
+    <string name="qs_stroke_title">QS shade stroke</string>
+    <string name="qs_stroke_disabled">Disabled</string>
+    <string name="qs_stroke_accent">Accent color</string>
+    <string name="qs_stroke_custom">Custom color</string>
+    <string name="qs_stroke_color_title">QS shade stroke color</string>
+    <string name="qs_stroke_thickness_title">QS shade stroke thickness</string>
+    <string name="qs_corner_radius_title">QS shade corner radius</string>
+
 </resources>
