[2/2] Left handed navbar during landscape mode
This patch allows for the navbar to be moved to the left side of the
screen during landscape mode. Left handed people are more used to this
option.

Screenshot: http://i.imgur.com/jWqJcEV.png

Contributors:

Decad3nce
https://github.com/CyanogenMod/android_packages_apps_Settings/commit/a2b5ff1542e802f4257e7a7746ceb9e1c9cf333e

romanbb
https://github.com/CyanogenMod/android_packages_apps_Settings/commit/34344a5fa2a03d849901f09340f3dd8010e2a7fe

crpalmer
https://github.com/CyanogenMod/android_packages_apps_Settings/commit/6833e8c627e0b44b0ee7191fce714556ab3eac25

Change-Id: Ie743fc1eb37d551a79fd61854453ab23917ca2db

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -238,6 +238,8 @@
     <string name="navbar_cat">Navigation bar</string>
     <string name="navbar_dimensions_reset_message">Reset all dimensions entries to default?</string>
     <string name="navbar_button_style_reset_message">Reset all style entries to default?</string>
+    <string name="navigation_bar_left_title">Left-handed mode</string>
+    <string name="navigation_bar_left_summary">Shows the navigation bar in landscape on the left</string>
 
     <!-- Navigation bar button style -->
     <string name="nav_bar_button_style">Button style</string>
