--- a/res/xml/navbar_settings.xml
+++ b/res/xml/navbar_settings.xml
@@ -72,6 +72,11 @@
                     android:title="@string/navbar_can_move"
                     android:summary="@string/navbar_can_move_summary" />
 
+            <com.android.settings.broken.SystemSettingSwitchPreference
+                    android:key="navigation_bar_left"
+                    android:title="@string/navigation_bar_left_title"
+                    android:summary="@string/navigation_bar_left_summary" />
+            
         </PreferenceCategory>
 
         <PreferenceCategory
