[Settings] Configurable Header Text Shadow (2/2)
PS2: Add option to change shadow color
PS3: Fix some tabs
PS4: Change max value to 25 since that is the maximum allowed by the system
PS5: When You Change Online But Don't Cherry-Pick Locally -_-

Change-Id: I852bb25c18567d898c198f0948326f82e33c6430
Signed-off-by: pranav <cherukupallip@gmail.com>

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -1652,4 +1652,8 @@
     <string name="qs_panel_logo_color_title">QS panel image color</string>
     <string name="qs_panel_logo_alpha_title">QS panel image transparency</string>
 
+    <!-- Header text shadow and color -->
+    <string name="status_bar_custom_header_text_shadow_title">Header text shadow</string>
+    <string name="status_bar_custom_header_text_shadow_summary">For better visibility on themed headers</string>
+    <string name="status_bar_custom_header_text_shadow_color_title">Header text shadow color</string>
 </resources>
