--- a/res/xml/broken_settings_statusbar.xml
+++ b/res/xml/broken_settings_statusbar.xml
@@ -19,16 +19,22 @@
         android:summary="@string/battery_bar_summary"
         android:title="@string/battery_bar" />
 
+    <PreferenceScreen
+        android:fragment="com.android.settings.broken.StatusBarClockStyle"
+        android:key="clock_style_pref"
+        android:title="@string/status_bar_clock"
+	    android:summary="@string/status_bar_clock_summary" />
+	    
+    </PreferenceCategory>
+        
+    <PreferenceCategory
+        android:key="statusbar_options_category"
+        android:title="@string/statusbar_options_title" >
+
     <com.android.settings.broken.SystemSettingSwitchPreference
         android:key="status_bar_brightness_control"
         android:title="@string/status_bar_toggle_brightness"
         android:summary="@string/status_bar_toggle_brightness_summary"/>
-        
-    <com.android.settings.broken.SecureSettingSwitchPreference
-        android:key="qs_show_brightness_slider"
-        android:title="@string/qs_brightness_slider_title"
-        android:summary="@string/qs_brightness_slider_summary"
-        android:defaultValue="true"/>
         
     <com.android.settings.broken.SystemSettingSwitchPreference
         android:key="status_bar_broken_logo"
@@ -41,47 +47,6 @@
         android:key="carrierlabel"
         android:title="@string/carrier_options" 
         android:summary="@string/carrier_summary" />
-
-    <PreferenceScreen
-        android:fragment="com.android.settings.broken.StatusBarClockStyle"
-        android:key="clock_style_pref"
-        android:title="@string/status_bar_clock"
-	    android:summary="@string/status_bar_clock_summary" />
-	    
-    </PreferenceCategory>
-
-    <com.android.settings.broken.widget.SeekBarPreferenceCham
-        android:key="status_bar_custom_header_text_shadow"
-        android:title="@string/status_bar_custom_header_text_shadow_title"
-        android:summary="@string/status_bar_custom_header_text_shadow_summary"
-        android:defaultValue="0"
-        android:max="25"
-        settings:min="0"
-        settings:unitsLeft=""
-        settings:unitsRight=""
-        android:persistent="false" />
-
-        <net.margaritov.preference.colorpicker.ColorPickerPreference
-            android:key="status_bar_custom_header_text_shadow_color"
-            android:title="@string/status_bar_custom_header_text_shadow_color_title" />
-                    
-    <com.android.settings.broken.SystemSettingSwitchPreference
-        android:key="status_bar_custom_header"
-        android:title="@string/status_bar_custom_header_title"
-        android:summary="@string/status_bar_custom_header_summary"
-        android:defaultValue="false"/>
-        
-    <com.android.settings.broken.widget.SeekBarPreferenceCham
-         android:key="status_bar_custom_header_shadow"
-         android:title="@string/status_bar_custom_header_shadow_title"
-         android:summary="@string/status_bar_custom_header_shadow_summary"
-         android:defaultValue="0"
-         android:max="100"
-         settings:minimum="0"
-         settings:unitsLeft=""
-         settings:unitsRight=""
-         android:persistent="false"
-         android:dependency="status_bar_custom_header" />
         
     <ListPreference
         android:key="quick_pulldown"
@@ -115,7 +80,48 @@
         android:fragment="com.android.settings.broken.Traffic"
         android:title="@string/traffic_category" 
         android:summary="@string/traffic_settings_summary" />
+        
+    </PreferenceCategory>    
+        
+    <PreferenceCategory
+        android:key="panel_options_category"
+        android:title="@string/qs_panel_options_title" >
 
+    <com.android.settings.broken.widget.SeekBarPreferenceCham
+        android:key="status_bar_custom_header_text_shadow"
+        android:title="@string/status_bar_custom_header_text_shadow_title"
+        android:summary="@string/status_bar_custom_header_text_shadow_summary"
+        android:defaultValue="0"
+        android:max="25"
+        settings:min="0"
+        settings:unitsLeft=""
+        settings:unitsRight=""
+        android:persistent="false" />
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="status_bar_custom_header_text_shadow_color"
+            android:title="@string/status_bar_custom_header_text_shadow_color_title" />
+                    
+    <com.android.settings.broken.SystemSettingSwitchPreference
+        android:key="status_bar_custom_header"
+        android:title="@string/status_bar_custom_header_title"
+        android:summary="@string/status_bar_custom_header_summary"
+        android:defaultValue="false"/>
+        
+    <com.android.settings.broken.widget.SeekBarPreferenceCham
+         android:key="status_bar_custom_header_shadow"
+         android:title="@string/status_bar_custom_header_shadow_title"
+         android:summary="@string/status_bar_custom_header_shadow_summary"
+         android:defaultValue="0"
+         android:max="100"
+         settings:minimum="0"
+         settings:unitsLeft=""
+         settings:unitsRight=""
+         android:persistent="false"
+         android:dependency="status_bar_custom_header" />
+    
+    </PreferenceCategory>
+    
     <PreferenceCategory
         android:key="weather_clock_category"
         android:title="@string/weather_clock_title" >
