--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -1741,4 +1741,7 @@
     <string name="vendor_version">Vendor version</string>
     <string name="vendor_version_default">Unknown</string>
 
+    <!-- App details: open play store link if app is user installed -->
+    <string name="app_play_store">Google Play</string>
+
 </resources>
