Volume dialog timeout [2/2]
Use Slim's SeekBarPreference

Change-Id: Ibd897623193a6466185174d3e9e6bb6ce286fff2

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -1670,4 +1670,7 @@
    <string name="menu_show_substratum">Show overlays</string>
    <string name="menu_hide_substratum">Hide overlays</string>
 
+   <!-- Volume dialog timeout -->
+   <string name="volume_dialog_timeout_title">Volume dialog timeout</string>
+
 </resources>
