Apps: show/hide Substratum overlays (2/2)
Default behavior is "hidden" substratum overlays,
as they pollute the screen, and you can't notice the
actual apps.
So we follow the current trend set by Android with
"show system" and make it "show overlays" on default.

Change-Id: I86d07364d4ddcc04aac309541b3ad514f7a86062

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -1661,4 +1661,10 @@
     <string name="status_bar_custom_header_text_shadow_title">Header text shadow</string>
     <string name="status_bar_custom_header_text_shadow_summary">For better visibility on themed headers</string>
     <string name="status_bar_custom_header_text_shadow_color_title">Header text shadow color</string>
+
+    <!-- Manage applications: show substratum overlays -->
+   <string name="filter_substratum_apps">Substratum overlays</string>
+   <string name="menu_show_substratum">Show overlays</string>
+   <string name="menu_hide_substratum">Hide overlays</string>
+
 </resources>
