QS: Viper tile [2/2]
Change-Id: Icf649258c6fa0a3dfd53efd9d820ef301a9c4137

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -797,6 +797,9 @@
     <!-- KA Tile -->
     <string name="qs_tile_kernel_adiutor">Kernel Adiutor</string>
 
+    <!-- Viper tile -->
+    <string name="qs_tile_viper4android">Viper4Android</string>
+
     <!-- Sound settings -->
     <string name="advanced_sound_title">Advanced options</string>
     <string name="sound_title">Sound</string>
