Dynamically define currently installed vendor.img version [2/2]
*parse the vendor fingerprint for the vendor build id
*automatically remove on devices without a vendor image

Thanks to @dwitherell for the help with the parsing logic :)

Change-Id: I15f70fb9d4e3089f936a58135f5ef68da437ca49

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -1737,4 +1737,8 @@
     <string name="qs_stroke_thickness_title">QS shade stroke thickness</string>
     <string name="qs_corner_radius_title">QS shade corner radius</string>
 
+    <!-- Vendor version -->
+    <string name="vendor_version">Vendor version</string>
+    <string name="vendor_version_default">Unknown</string>
+
 </resources>
