--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -17,7 +17,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         android:title="@string/about_settings">
         <PreferenceScreen android:layout="@layout/logo" android:key="od_logo" />
-        
+
         <PreferenceScreen
                android:key="about_broken"
                android:fragment="com.android.settings.broken.BrokenAbout"
@@ -75,7 +75,7 @@
                 android:summary="@string/device_info_default"/>
 
         <!-- Device build id -->
-        <Preference android:key="build_id" 
+        <Preference android:key="build_id"
                 style="?android:preferenceInformationStyle"
                 android:title="@string/build_id"
                 android:summary="@string/device_info_default"/>
@@ -99,11 +99,11 @@
                 android:summary="@string/broken_version_default"/>
 
         <!-- Device Kernel version -->
-        <Preference android:key="kernel_version" 
+        <Preference android:key="kernel_version"
                 style="?android:preferenceInformationStyle"
                 android:title="@string/kernel_version"
                 android:summary="@string/device_info_default"/>
-                
+
         <!-- Build date -->
         <Preference android:key="build_date"
                 style="?android:preferenceInformationStyle"
@@ -127,6 +127,12 @@
                 style="?android:preferenceInformationStyle"
                 android:title="@string/baseband_version"
                 android:summary="@string/device_info_default"/>
+
+        <!-- Vendor Version -->
+        <Preference android:key="vendor_version"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/vendor_version"
+                android:summary="@string/vendor_version_default" />
 
         <!-- SELinux status information -->
         <Preference android:key="selinux_status"
