Settings: Notifications transparency (2/2)
Change-Id: I83296308a5ee822c4fbd96d5a3547b204da17c0e

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -1723,4 +1723,7 @@
    <string name="qs_settings_advanced_title">Header and Shade Tweaks</string>
    <string name="qs_settings_advanced_summary">Various mods for the QS shade and header</string>
 
+    <!-- Notifications transparency -->
+    <string name="notifications_transparency">Notifications transparency</string>
+
 </resources>
