--- a/res/xml/qs_settings_advanced.xml
+++ b/res/xml/qs_settings_advanced.xml
@@ -26,6 +26,15 @@
             settings:unitsRight=""
             android:persistent="false" />
 
+        <com.android.settings.broken.widget.SeekBarPreferenceCham
+            android:key="notification_alpha"
+            android:title="@string/notifications_transparency"
+            android:max="255"
+            settings:min="0"
+            settings:unitsLeft=""
+            settings:unitsRight=""
+            android:persistent="false" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
