Settings: create QS advanced mods category Moved all the shading color and transparency mods for the QS shade and headers to their own new category. More mods to come in the future.
Change-Id: I9dac0f44de57ed404bf9da3aeddc3db4c59c3462
Signed-off-by: CrackerTeg <crackerteg@gmail.com>

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -1719,4 +1719,8 @@
    <string name="greeting_preview_title">Preview</string>
    <string name="greeting_preview_summary">Click to show a preview</string>
 
+   <!-- QS Advanced Mods -->
+   <string name="qs_settings_advanced_title">Header and Shade Tweaks</string>
+   <string name="qs_settings_advanced_summary">Various mods for the QS shade and header</string>
+
 </resources>
