--- a/res/xml/qs_settings.xml
+++ b/res/xml/qs_settings.xml
@@ -28,18 +28,18 @@
             android:fragment="com.android.settings.broken.qs.QSTiles" />
 
         <ListPreference
-			android:key="qs_tile_animation_style"
-			android:title="@string/qs_tile_animation_style_title"
-			android:entries="@array/qs_tile_animation_style_entries"
-			android:entryValues="@array/qs_tile_animation_style_values"
-			android:persistent="false" />
+            android:key="qs_tile_animation_style"
+            android:title="@string/qs_tile_animation_style_title"
+            android:entries="@array/qs_tile_animation_style_entries"
+            android:entryValues="@array/qs_tile_animation_style_values"
+            android:persistent="false" />
 
-		<ListPreference
-			android:key="qs_tile_animation_duration"
-			android:title="@string/qs_tile_animation_duration_title"
-			android:entries="@array/qs_tile_animation_duration_entries"
-			android:entryValues="@array/qs_tile_animation_duration_values"
-			android:persistent="false" />
+        <ListPreference
+            android:key="qs_tile_animation_duration"
+            android:title="@string/qs_tile_animation_duration_title"
+            android:entries="@array/qs_tile_animation_duration_entries"
+            android:entryValues="@array/qs_tile_animation_duration_values"
+            android:persistent="false" />
 
         <com.android.settings.broken.SecureSettingSwitchPreference
             android:key="sysui_qs_main_tiles"
@@ -64,7 +64,7 @@
             android:key="qs_use_four_columns"
             android:title="@string/qs_four_columns_title"
             android:defaultValue="false" />
-        
+
         <com.android.settings.broken.SecureSettingSwitchPreference
             android:key="qs_show_brightness_slider"
             android:title="@string/qs_brightness_slider_title"
@@ -78,56 +78,11 @@
             android:persistent="false" />
 
         </PreferenceCategory>
-        
-        <PreferenceCategory
-            android:key="transparency_category"
-            android:title="@string/transparency_options_title" >
 
-        <com.android.settings.broken.widget.SeekBarPreferenceCham
-            android:key="qs_transparent_shade"
-            android:title="@string/qs_transparent_shade"
-            android:max="255"
-            settings:minimum="0"
-            settings:unitsLeft=""
-            settings:unitsRight=""
-            android:persistent="false" />
-
-        <com.android.settings.broken.widget.SeekBarPreferenceCham
-            android:key="qs_transparent_header"
-            android:title="@string/qs_transparent_header"
-            android:max="255"
-            settings:minimum="0"
-            settings:unitsLeft=""
-            settings:unitsRight=""
-            android:persistent="false" />
-
-        </PreferenceCategory>
-
-        <PreferenceCategory
-            android:key="qs_panel_logo_category"
-            android:title="@string/qs_panel_logo_category">
-
-        <ListPreference
-            android:key="qs_panel_logo"
-            android:title="@string/qs_panel_logo_title"
-            android:dialogTitle="@string/qs_panel_logo_title"
-            android:entries="@array/qs_panel_logo_entries"
-            android:entryValues="@array/qs_panel_logo_values"
-            android:defaultValue="0" />
-
-        <com.android.settings.broken.widget.SeekBarPreferenceCham
-            android:key="qs_panel_logo_alpha"
-            android:title="@string/qs_panel_logo_alpha_title"
-            android:max="255"
-            settings:minimum="0"
-            settings:unitsLeft=""
-            settings:unitsRight="%"
-            android:persistent="false" />
-
-        <net.margaritov.preference.colorpicker.ColorPickerPreference
-            android:key="qs_panel_logo_color"
-            android:title="@string/qs_panel_logo_color_title" />
-
-    </PreferenceCategory>
+        <PreferenceScreen
+            android:id="@+id/qs_settings_advanced"
+            android:title="@string/qs_settings_advanced_title"
+            android:summary="@string/qs_settings_advanced_summary"
+            android:fragment="com.android.settings.broken.QsSettingsAdvanced" />
 
 </PreferenceScreen>
